# codoraApp

./: .env  ANDROID_TEST_RESULTS.md  FILTERS_DISPLAY_SYSTEM_README.md  FILTERS_PERFORMANCE_UPDATES.md  FILTERS_SYSTEM_EXAMPLES.dart  FILTERS_UI_IMPROVEMENTS.md  FILTERS_UI_V2_UPDATES.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIREBASE_PHONE_AUTH_SETUP.md  FIREBASE_SETUP_GUIDE.md  FIREBASE_TROUBLESHOOTING_GUIDE.md  FLUTTER_SCREENUTIL_ADDITEM_UPDATES.md  FLUTTER_SCREENUTIL_PROFESSIONAL_ORDERS_UPDATES.md  PHONE_AUTH_TROUBLESHOOTING.md  PHONE_AUTH_TROUBLESHOOTING_GUIDE.md  README.md  SALES_ANALYTICS_README.md  TEST_PHONE_INSTRUCTIONS.md  firebase.json  firebase_check.sh  pubspec.yaml  pyproject.toml
.cursor/: mcp.json
.lh/: ANDROID_TEST_RESULTS.md.json  FILTERS_DISPLAY_SYSTEM_README.md.json  FILTERS_PERFORMANCE_UPDATES.md.json  FILTERS_SYSTEM_EXAMPLES.dart.json  FILTERS_UI_IMPROVEMENTS.md.json  FILTERS_UI_V2_UPDATES.md.json  FINAL_IMPLEMENTATION_SUMMARY.md.json  FIREBASE_PHONE_AUTH_SETUP.md.json  FIREBASE_SETUP_GUIDE.md.json  FIREBASE_TROUBLESHOOTING_GUIDE.md.json  FLUTTER_SCREENUTIL_ADDITEM_UPDATES.md.json  FLUTTER_SCREENUTIL_PROFESSIONAL_ORDERS_UPDATES.md.json  ORDER_CONFIRMATION_IMPROVEMENTS.md.json  PHONE_AUTH_TROUBLESHOOTING.md.json  PHONE_AUTH_TROUBLESHOOTING_GUIDE.md.json  SALES_ANALYTICS_README.md.json  SELLER_REGISTRATION_UI_IMPROVEMENTS.md.json  TEST_PHONE_INSTRUCTIONS.md.json  firebase_check.sh.json  pubspec.yaml.json
android/: build.gradle.kts  settings.gradle.kts
ios/: .cursorrules  ADVANCED_AI_RULES_DOCUMENTATION.md  ADVANCED_PERMISSIONS_REVIEW_RULES.md  Podfile  (+41 more)
(+565 files in other folders)
