[tool.poetry]
name = "gemini-cli"
version = "2.0.0"
description = "Gemini CLI with advanced features"
authors = ["Your Name <email@example.com>"]
readme = "README.md"
packages = [{include = "ios"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.pylint]
max-line-length = 88
disable = ["C0111", "C0103"]
